# K-Editor

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt
example/src/: MainWindow.cpp
lib/: CMakeLists.txt
lib/public/: QAddressArea  QAddressArea.hpp  QCXXHighlighter  QCodeEditor  QCodeEditor.hpp  QFramedTextAttribute  QGLSLCompleter  QGLSLHighlighter  QHighlightBlockRule  QHighlightRule  QJSONHighlighter  QLanguage  QLineNumberArea  QLuaCompleter  QLuaHighlighter  QPythonCompleter  QPythonHighlighter  QStyleSyntaxHighlighter  QSyntaxStyle  QXMLHighlighter
lib/public/completers/: QLuaCompleter.hpp
lib/src/: QAddressArea.cpp  QCodeEditor.cpp  QFramedTextAttribute.cpp  QLanguage.cpp  QLineNumberArea.cpp  QStyleSyntaxHighlighter.cpp  QSyntaxStyle.cpp
lib/src/completers/: QLuaCompleter.cpp  QPythonCompleter.cpp
lib/src/highlighters/: QCXXHighlighter.cpp  QGLSLHighlighter.cpp  QJSONHighlighter.cpp  QLuaHighlighter.cpp  QPythonHighlighter.cpp  QXMLHighlighter.cpp
lib/tests/: CMakeLists.txt
lib/tests/src/: TestFirst.cpp  TestFirst.hpp  TestRunner.cpp  TestRunner.hpp  TestSecond.cpp  TestSecond.hpp  main.cpp
